2007-04-23 [wwp]	2.9.1cvs18

	* src/prefs_common.c
		Fix 2.9.1cvs5: no header was being translated at all.

2007-04-23 [colin]	2.9.1cvs17

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
	* src/pixmaps/selection.xpm
		Fix bug 1193, 'Need a way to multi-select
		items'. Add a toggle button to the summaryview
		to switch between normal and multiple selection
		(Maemo)

2007-04-23 [colin]	2.9.1cvs16

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
	* src/pixmaps/selection.xpm
		Fix bug 1193, 'Need a way to multi-
		select items'
		Add a toggle button in the summaryview
		to enable normal or multiple selection.
		(Maemo)

2007-04-23 [colin]	2.9.1cvs15

	* src/compose.c
		Fix bug 1196, 'Edit>Select All doesn't work' (Maemo)

2007-04-21 [colin]	2.9.1cvs14

	* src/gtk/quicksearch.c
		Fix previous commit (actually use correct
		parameter)

2007-04-21 [colin]	2.9.1cvs13

	* src/gtk/quicksearch.c
		Fix changing quicksearch type (after Esc,
		after changing Recursive, ...)

2007-04-20 [wwp]	2.9.1cvs12

	* src/gtk/Makefile.am
		Added headers.h (completes 2.9.1cvs5).

2007-04-20 [wwp]	2.9.1cvs11

	* src/addressbook.c
		Fix the use of display name in name column,
		it has been overriden w/ the use of nickname
		by 2.9.0cvs3. Now nickname is used (if any)
		in case of LDAP books only.

2007-04-20 [colin]	2.9.1cvs10

	* src/mimeview.c
	* src/summaryview.c
	* src/textview.c
		Add handling of 'a' to loop in a mail's
		mimeparts

2007-04-20 [colin]	2.9.1cvs9

	* src/toolbar.c
		Fix bug 1190, 'dir_open' button doesn't work'
		(Maemo)

2007-04-20 [colin]	2.9.1cvs8

	* src/folderview.c
	* src/mainwindow.c
		Fix bug 1194, 'Hardware keys move from email 
		list to account/directory list, but not back 
		to email list...' (Maemo)

2007-04-20 [colin]	2.9.1cvs7

	* src/compose.h