@@ -2546,3 +2546,4 @@
 ( cvs diff -u -r 1.155.2.61 -r 1.155.2.62 src/Makefile.am;  cvs diff -u -r 1.25.2.36 -r 1.25.2.37 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.25 -r 1.18.2.26 src/stock_pixmap.h;  cvs diff -u -r 1.395.2.298 -r 1.395.2.299 src/summaryview.c;  cvs diff -u -r 1.68.2.36 -r 1.68.2.37 src/summaryview.h;  cvs diff -u -r 1.1.4.38 -r 1.1.4.39 src/gtk/gtksctree.c;  cvs diff -u -r 1.1.4.10 -r 1.1.4.11 src/gtk/gtksctree.h;  diff -u /dev/null src/pixmaps/selection.xpm;  ) > 2.9.1cvs16.patchset
 ( cvs diff -u -r 1.155.2.61 -r 1.155.2.62 src/Makefile.am;  cvs diff -u -r 1.25.2.36 -r 1.25.2.37 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.25 -r 1.18.2.26 src/stock_pixmap.h;  cvs diff -u -r 1.395.2.298 -r 1.395.2.299 src/summaryview.c;  cvs diff -u -r 1.68.2.36 -r 1.68.2.37 src/summaryview.h;  cvs diff -u -r 1.1.4.38 -r 1.1.4.39 src/gtk/gtksctree.c;  cvs diff -u -r 1.1.4.10 -r 1.1.4.11 src/gtk/gtksctree.h;  diff -u /dev/null src/pixmaps/selection.xpm;  ) > 2.9.1cvs17.patchset
 ( cvs diff -u -r 1.204.2.131 -r 1.204.2.132 src/prefs_common.c;  ) > 2.9.1cvs18.patchset
+( cvs diff -u -r 1.96.2.169 -r 1.96.2.170 src/textview.c;  cvs diff -u -r 1.12.2.18 -r 1.12.2.19 src/textview.h;  ) > 2.9.1cvs19.patchset
