@@ -1,3 +1,9 @@
+2007-04-24 [wwp]	2.9.1cvs19
+
+	* src/textview.c
+	* src/textview.h
+		Fix a crash in textview, thanks to Colin.
+
 2007-04-23 [wwp]	2.9.1cvs18
 
 	* src/prefs_common.c
